JSAI/error/src/test/resources/base/j009.js
better_call = function() { print("call"); return 11; }
call = better_call;
call();
